fix scrollbars in navigation tabs

--- a/app/assets/styles/navbar.scss
+++ b/app/assets/styles/navbar.scss
@@ -242,7 +242,6 @@ i {
 .tabs-title.is-active a:link{
   color: #888;
   margin-top:-1px;
-  margin-bottom:-1px;
   background: rgba(220,220,220,0.5);
   #border-bottom: 3px solid green !important;
   text-shadow: 0 1px 1px white;
